# theoneshot

./: .dockerignore  .gitignore  .gitmodules  Agents.md  README.md  aud
openai_project/aflow/: .gitignore  README.md  pyproject.toml
openai_project/aflow/docs/: lifecycle.md  validation.md
openai_project/aflow/schemas/v1/: SHA256SUMS.json  analysis-decision.schema.json  analysis-request.schema.json  authority-evidence.schema.json  baseline.schema.json  build-result.schema.json  closure-request.schema.json  closure-result.schema.json  common.schema.json  drift-decision.schema.json  drift-event.schema.json  evidence.schema.json  expected-analysis-predicates.schema.json  expected-final-predicates.schema.json  final-evaluation.schema.json  finding.schema.json  fixture-manifest.schema.json  locked-plan.schema.json  plan.schema.json  repository-evidence.schema.json  requirement-evidence-trace.schema.json  schema-admission-result.schema.json  semantic-review.schema.json  success-definition.schema.json
openai_project/aflow/scripts/: generate_fixtures.py  validate_schemas.py
openai_project/aflow/src/aflow/: __init__.py  cli.py
openai_project/aflow/tests/: conftest.py
openai_project/aflow/tests/acceptance/: test_cli.py  test_fixtures_and_demo.py
openai_project/aflow/tests/boundary/: test_execution_boundaries.py  test_fixture_isolation.py
openai_project/aflow/tests/golden/: demo-summary.json
openai_project/aflow/tests/integration/: test_lifecycle.py
openai_project/runtime/: pyproject.toml
openai_project/runtime/tests/: provider_testkit.py  test_action_parser.py  test_aflow_hook_enforcement.py  test_aflow_ignition.py  test_aflow_lifecycle.py  test_api_flow.py  test_audisor_analysis_package.py  test_audisor_auto_trigger.py  test_audisor_hook_enforcement.py  test_audisor_ignition.py  test_audisor_indicator.py  test_audisor_lifecycle.py  test_audisor_run_gate.py  test_audisor_toggle.py  test_auth_api.py  test_build_api.py  test_build_audisor_analysis.py  test_build_dependencies.py  test_build_executor.py  test_build_preparer.py  test_build_schemas.py  test_build_store.py  test_canonical_operations.py  test_cli.py  test_config.py  test_execution_api.py  test_execution_authority.py  test_execution_contract_adapter.py  test_execution_launcher.py  test_execution_schemas.py  test_execution_store.py  test_execution_workspace.py  test_file_runner.py  test_global_authority.py  test_health_api.py  test_hook_wire_format.py  test_host_agnostic_config.py  test_idempotency.py  test_integrate.py  test_local_audisor_invoker.py  (+17 more)
(+349 files in other folders)
