[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theoneshot-aflow"
version = "0.9.0"
description = "Deterministic plan analysis and build-evidence evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.24,<5"]

[project.optional-dependencies]
dev = ["pytest>=8.4,<9"]

[project.scripts]
aflow = "aflow.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aflow"]

[tool.hatch.build.targets.wheel.force-include]
"schemas/v1" = "aflow/schemas/v1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
