[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audisor"
version = "0.1.0"
description = "Audisor local task execution API"
requires-python = ">=3.11"
dependencies = [
    "dulwich>=1.2.1,<2",
    "fastapi>=0.116,<1",
    "pydantic>=2.11,<3",
    "requests>=2.32,<3",
    "uvicorn>=0.35,<1",
]

[project.scripts]
audisor = "audisor.cli:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "jsonschema>=4.24,<5",
    "pytest>=8.4,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/audisor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live_fireworks: requires complete Fireworks configuration",
    "live_local: requires a configured local OpenAI-compatible endpoint",
]
